[gd_scene load_steps=4 format=3 uid="uid://ctfgo3l4i1w7u"]

[ext_resource type="Script" path="res://UI/Scripts/StatsMenu.gd" id="1_c13f5"]
[ext_resource type="Shader" path="res://UI/Shaders/Blur.gdshader" id="1_igtpi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t38au"]
shader = ExtResource("1_igtpi")
shader_param/blur = 1.77778
shader_param/brightness = 0.822222

[node name="StatsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_c13f5")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_t38au")
anchor_right = 1.0
anchor_bottom = 1.0

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="V" type="VBoxContainer" parent="M"]
offset_left = 20.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 780.0

[node name="Header" type="MarginContainer" parent="M/V"]
custom_minimum_size = Vector2(0, 150)
offset_right = 1240.0
offset_bottom = 150.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="M/V/Header"]
offset_left = 20.0
offset_top = 20.0
offset_right = 1220.0
offset_bottom = 140.0

[node name="Label" type="Label" parent="M/V/Header"]
offset_left = 20.0
offset_top = 56.0
offset_right = 1220.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 32
text = "Stats"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V"]
visible = false
offset_top = 154.0
offset_right = 1240.0
offset_bottom = 158.0

[node name="Stats" type="MarginContainer" parent="M/V"]
offset_top = 154.0
offset_right = 1240.0
offset_bottom = 760.0
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel2" type="Panel" parent="M/V/Stats"]
offset_left = 20.0
offset_top = 10.0
offset_right = 1220.0
offset_bottom = 586.0

[node name="MarginContainer" type="MarginContainer" parent="M/V/Stats"]
offset_left = 20.0
offset_top = 10.0
offset_right = 1220.0
offset_bottom = 586.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="M/V/Stats/MarginContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 1180.0
offset_bottom = 556.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Blank" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
visible = false
offset_left = 149.0
offset_top = 94.0
offset_right = 270.0
offset_bottom = 178.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Blank" type="Control" parent="M/V/Stats/MarginContainer/GridContainer/Blank"]
offset_left = 10.0
offset_top = 10.0
offset_right = 111.0
offset_bottom = 74.0

[node name="TimePlayed" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_right = 114.0
offset_bottom = 84.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/TimePlayed"]
offset_left = 10.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimePlayed/V"]
offset_right = 94.0
offset_bottom = 26.0
text = "Time Played"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/TimePlayed/V"]
offset_top = 30.0
offset_right = 94.0
offset_bottom = 34.0

[node name="TimePlayedAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimePlayed/V"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 94.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="TimeGround" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 124.0
offset_right = 245.0
offset_bottom = 84.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TimeGround" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/TimeGround"]
offset_left = 10.0
offset_top = 10.0
offset_right = 111.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeGround/TimeGround"]
offset_right = 101.0
offset_bottom = 26.0
text = "Ground Time"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/TimeGround/TimeGround"]
offset_top = 30.0
offset_right = 101.0
offset_bottom = 34.0

[node name="TimeGroundAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeGround/TimeGround"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 101.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="TimeAir" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 255.0
offset_right = 340.0
offset_bottom = 84.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TimeAir" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/TimeAir"]
offset_left = 10.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeAir/TimeAir"]
offset_right = 65.0
offset_bottom = 26.0
text = "Air Time"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/TimeAir/TimeAir"]
offset_top = 30.0
offset_right = 65.0
offset_bottom = 34.0

[node name="TimeAirAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeAir/TimeAir"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 65.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="TimeWater" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 350.0
offset_right = 460.0
offset_bottom = 84.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/TimeWater"]
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeWater/V"]
offset_right = 90.0
offset_bottom = 26.0
text = "Water Time"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/TimeWater/V"]
offset_top = 30.0
offset_right = 90.0
offset_bottom = 34.0

[node name="TimeWaterAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeWater/V"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 90.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="TimeBurrowed" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 470.0
offset_right = 609.0
offset_bottom = 84.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/TimeBurrowed"]
offset_left = 10.0
offset_top = 10.0
offset_right = 129.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeBurrowed/V"]
offset_right = 119.0
offset_bottom = 26.0
text = "Burrowed Time"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/TimeBurrowed/V"]
offset_top = 30.0
offset_right = 119.0
offset_bottom = 34.0

[node name="TimeBurrowedAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/TimeBurrowed/V"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 119.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="Jumps" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_top = 94.0
offset_right = 114.0
offset_bottom = 178.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Jumps" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/Jumps"]
offset_left = 10.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 74.0
alignment = 1

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Jumps/Jumps"]
offset_right = 94.0
offset_bottom = 26.0
text = "Jumps"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/Jumps/Jumps"]
offset_top = 30.0
offset_right = 94.0
offset_bottom = 34.0

[node name="JumpsAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Jumps/Jumps"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 94.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="JumpWall" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 124.0
offset_top = 94.0
offset_right = 245.0
offset_bottom = 178.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Jumps" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/JumpWall"]
offset_left = 10.0
offset_top = 10.0
offset_right = 111.0
offset_bottom = 74.0
alignment = 1

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/JumpWall/Jumps"]
offset_right = 101.0
offset_bottom = 26.0
text = "Wall Jumps"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/JumpWall/Jumps"]
offset_top = 30.0
offset_right = 101.0
offset_bottom = 34.0

[node name="JumpsWallAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/JumpWall/Jumps"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 101.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="Dashes" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 255.0
offset_top = 94.0
offset_right = 340.0
offset_bottom = 178.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Dashes" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/Dashes"]
offset_left = 10.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Dashes/Dashes"]
offset_right = 65.0
offset_bottom = 26.0
text = "Dashes"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/Dashes/Dashes"]
offset_top = 30.0
offset_right = 65.0
offset_bottom = 34.0

[node name="DashsAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Dashes/Dashes"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 65.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="Grapples" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 350.0
offset_top = 94.0
offset_right = 460.0
offset_bottom = 178.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/Grapples"]
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Grapples/V"]
offset_right = 90.0
offset_bottom = 26.0
text = "Grapples
"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/Grapples/V"]
offset_top = 30.0
offset_right = 90.0
offset_bottom = 34.0

[node name="GrapplesAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Grapples/V"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 90.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="Deaths" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 470.0
offset_top = 94.0
offset_right = 609.0
offset_bottom = 178.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Deaths" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/Deaths"]
offset_left = 10.0
offset_top = 10.0
offset_right = 129.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Deaths/Deaths"]
offset_right = 119.0
offset_bottom = 26.0
text = "Deaths
"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/Deaths/Deaths"]
offset_top = 30.0
offset_right = 119.0
offset_bottom = 34.0

[node name="DeathAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Deaths/Deaths"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 119.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="LongLife" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_top = 188.0
offset_right = 114.0
offset_bottom = 272.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/LongLife"]
offset_left = 10.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/LongLife/V"]
offset_right = 94.0
offset_bottom = 26.0
text = "Longest Life
"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/LongLife/V"]
offset_top = 30.0
offset_right = 94.0
offset_bottom = 34.0

[node name="LongLifeAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/LongLife/V"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 94.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1

[node name="Completion" type="MarginContainer" parent="M/V/Stats/MarginContainer/GridContainer"]
offset_left = 124.0
offset_top = 188.0
offset_right = 245.0
offset_bottom = 272.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Completion" type="VBoxContainer" parent="M/V/Stats/MarginContainer/GridContainer/Completion"]
offset_left = 10.0
offset_top = 10.0
offset_right = 111.0
offset_bottom = 74.0

[node name="Label" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Completion/Completion"]
offset_right = 101.0
offset_bottom = 26.0
text = "Completion"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="M/V/Stats/MarginContainer/GridContainer/Completion/Completion"]
offset_top = 30.0
offset_right = 101.0
offset_bottom = 34.0

[node name="CompletionAmount" type="Label" parent="M/V/Stats/MarginContainer/GridContainer/Completion/Completion"]
unique_name_in_owner = true
offset_top = 38.0
offset_right = 101.0
offset_bottom = 64.0
text = "test"
horizontal_alignment = 1
